--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<video autoplay loop muted playsinline>
-			<source src="./movies/demo.mov" type="video/mp4" />
+			<source src="./movies/demo.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 	</body>
