--- a/a/hefuihe.html
+++ b/a/hefuihe.html
@@ -20,8 +20,8 @@
 		</style>
 	</head>
 	<body>		
-		<video autoplay loop muted playsinline>
-			<source src="./hefuihe.mov" type="video/mp4" />			
+		<video autoplay loop playsinline>
+			<source src="./hefuihe.mp4" type="video/mp4" />			
 		</video>        
 	</body>
 </html>
