--- a/a/oldman123.html
+++ b/a/oldman123.html
@@ -21,15 +21,15 @@
 	</head>
 	<body>		
 		<video autoplay loop muted playsinline>
-			<source src="./oldman1.mov" type="video/mp4" />
+			<source src="./oldman1.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
         <video autoplay loop muted playsinline>
-			<source src="./oldman2.mov" type="video/mp4" />
+			<source src="./oldman2.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
         <video autoplay loop muted playsinline>
-			<source src="./oldman3.mov" type="video/mp4" />
+			<source src="./oldman3.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 	</body>
