--- a/b/triplejump2.html
+++ b/b/triplejump2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>《ブふぁああーーー》のダンス</title>
+		<title>Bの三段跳</title>
 		<style>
 			html,
 			body {
@@ -20,8 +20,8 @@
 		</style>
 	</head>
 	<body>		
-		<video autoplay loop playsinline>
-			<source src="./bufa.mp4" type="video/mp4" />			
+		<video autoplay loop muted playsinline>
+			<source src="./triplejump2.mp4" type="video/mp4" />			
 		</video>        
 	</body>
 </html>
