--- a/shako.html
+++ b/shako.html
@@ -39,7 +39,7 @@
   <body>
     <div class="stage">
       <video
-        src="./movies/demo.mp4"
+        src="./movies/shako.mp4"
         controls
         playsinline
         preload="metadata"
