--- a/b/triplejump1.html
+++ b/b/triplejump1.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>		
 		<video autoplay loop muted playsinline>
-			<source src="./triplejump1.mov" type="video/mp4" />			
+			<source src="./triplejump1.mp4" type="video/mp4" />			
 		</video>        
 	</body>
 </html>
