--- a/patterns/pattern_uzumaki.html
+++ b/patterns/pattern_uzumaki.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<video autoplay loop muted playsinline>
-			<source src="../movies/compressed_pattern_uzumaki.mov" type="video/mp4" />
+			<source src="../movies/compressed_pattern_uzumaki.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 	</body>
