--- a/styles/style_c.html
+++ b/styles/style_c.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<video autoplay loop muted playsinline>
-			<source src="../movies/compressed_style_c.mov" type="video/mp4" />
+			<source src="../movies/compressed_style_c.mp4" type="video/mp4" />
 			Your browser does not support the video tag.
 		</video>
 	</body>
