--- a/a/bufa.html
+++ b/a/bufa.html
@@ -20,10 +20,26 @@
 		</style>
 	</head>
 	<body>		
-		<video autoplay loop playsinline>
+		<video controls loop playsinline>
 			<source src="./bufa.mp4" type="video/mp4" />			
 		</video>        
 	</body>
 </html>
 
-<script defer src="../script.js"></script>
+<script>
+	document.addEventListener('DOMContentLoaded', () => {
+		const pageTitle = (document.title || '').trim()
+		if (!pageTitle) return
+
+		// 既に挿入済みなら何もしない
+		if (document.querySelector('.video-page-header')) return
+
+		// ヘッダ生成
+		const header = document.createElement('div')
+		header.className = 'video-page-header'
+
+		const h = document.createElement('div')
+		h.className = 'video-page-title'
+		h.textContent = pageTitle
+	})
+</script>
